@@ -8,10 +8,11 @@ NEW FEATURES
                Andrew Purtell)
    HBASE-3345  Coprocessors: Allow observers to completely override base
                function
-               
+
 IMPROVEMENTS
    HBASE-2001  Coprocessors: Colocate user code with regions (Mingjie Lai via
                Andrew Purtell)
+   HBASE-3260  Coprocessors: Add explicit lifecycle management
 
 Release 0.90.1 - February 9th, 2011
 
